--- a/bingo-app/package.json
+++ b/bingo-app/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.1",
-    "dotenv": "^16.4.5"
+    "sequelize": "^6.37.1"
   }
 }
