--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,9 +17,12 @@ services:
       - db  # this makes the host have a name "db" in the image
     ports:
       - $APP_LOCAL_PORT:$APP_IMAGE_PORT
+    volumes:
+      - ./bingo-app/public:/bingo-app/public
     env_file: ./image.env
     restart: unless-stopped
     tty: true
 
 volumes:
   db:
+  app:
