--- a/bingo-app/package.json
+++ b/bingo-app/package.json
@@ -14,13 +14,19 @@
   "license": "ISC",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@preact/signals": "^2.3.1",
+    "body-parser": "^2.2.0",
     "bootstrap": "^4.6.0",
+    "croppie": "^2.6.5",
+    "cropt": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "preact": "^10.26.5",
-    "sequelize": "^6.37.1"
+    "preact-iso": "^2.9.2",
+    "sequelize": "^6.37.1",
+    "vite-express": "^0.21.1"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.1",
