--- a/bingo-app/db/Dockerfile
+++ b/bingo-app/db/Dockerfile
@@ -1,4 +1,4 @@
 FROM postgres
 
-RUN echo "hello from the database"
+# RUN echo "hello from the database"
 COPY init.sql /docker-entrypoint-initdb.d/
