all the stuff i did server side. the default docker-compose is now for the server. hopefully the ssl process will work

--- a/bingo-app/db/Dockerfile
+++ b/bingo-app/db/Dockerfile
@@ -1,4 +1,5 @@
 FROM postgres
 
-# RUN echo "hello from the database"
+RUN echo "hello from the database"
 COPY init.sql /docker-entrypoint-initdb.d/
+
