--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,33 +5,30 @@ events {
 http {
     server {
         listen 80 default_server;
+
+	location ~ /.well-known/acme-challenge/ {
+	    root /var/www/certbot;
+	}
+
+	return 301 https://$host$request_uri;
+	}
+
+    server {
+        listen 443 ssl;
+        http2 on;
+        ssl_certificate /etc/letsencrypt/live/tga.zone/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tga.zone/privkey.pem;
         server_name tga.zone;
+        root /var/www/html;
+        index index.html;
 
         location / {
-            proxy_pass http://tgaapp:3000;
+            proxy_pass http://tga:3000/;
         }
 
         location ~ /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
-
-        #return 301 https://$host$request_uri;
     }
-
-#server {
-#    listen 443 ssl http2;
-#    server_name tga.zone; 
-#    ssl_certificate /etc/letsencrypt/live/tga.zone/fullchain.pem;
-#    ssl_certificate_key /etc/letsencrypt/live/tga.zone/privkey.pem;
-#
-#    location / {
-#        proxy_pass http://tgaapp:3000/;
-#    }
-#
-#    location ~ /.well-known/acme-challenge/ {
-#        root /var/www/certbot;
-#    }
-#
-#}
 }
 
